Sat Sep 19 15:02:20 BST 2009  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Fri Sep 11 01:19:41 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/id.po: Fix syntax error.

Wed Sep  9 14:42:18 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (General options): Refer to the "Warnings" node
	  in 'info groff' for a list of available warning names (Debian bug
	  #545805).

Wed Sep  9 14:36:39 BST 2009  Arif E. Nugroho  <arif_endro@yahoo.com>

	* man/po4a/po/id.po: Update from Translation Project.

Tue Sep  8 19:14:23 BST 2009  Arif E. Nugroho  <arif_endro@yahoo.com>

	* po/id.po: Update from Translation Project.

Wed Aug 26 01:12:20 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.6.
	* po/man-db.pot, po/*.po: Update.

Wed Aug 26 01:07:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (display): Include the section in the hash key used
	  to determine whether a page has already been displayed.

Wed Aug 26 00:20:45 BST 2009  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c (compare_ids): Fix documentation of return
	  values.
	  (replace_if_necessary): Don't replace ULT_MAN or SO_MAN with
	  lesser ids just because the mtime is newer. (This still satisfies
	  Debian bug #490582, but doesn't cause the database to be rebuilt
	  every time mandb runs on hierarchies with both symlinks and whatis
	  entries for the same name.)

Tue Aug 25 17:07:05 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (zh_CN_name, zh_TW_name): Add alternative
	  translation "名字", seen in testprns(1).

Tue Aug 25 17:05:51 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/man-1: Restrict manpath to test directories.

Tue Aug 25 10:30:58 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Add .bzrignore,
	  gnulib/lib/xmalloc.c.orig, gnulib/m4/intldir.m4,
	  gnulib/m4/sockpfaf.m4, and release.sh, for consistency between